2.3.0-RC1
---------
o Generates a warning when a plan using LOAD CSV uses MATCH or MERGE on a large label without an index
o Generates a warning when a plan using LOAD CSV also contains an EagerPipe
o Introduce STARTS WITH, ENDS WITH and CONTAINS
o ShortestPath no longer has a max limit of 15 steps
o Generates a warning when using shortestPath without supplying an upper limit
o Removes eagerness from query execution plans in cases where it is not necessary

2.3.0-M03
-------
o SKIP/LIMIT now allows arbitrary expressions that does not depend on identifiers
o Allow arbitrary expressions for URL in LOAD CSV
o Support for using compressed data with LOAD CSV
o Added reverse function for reversing strings
o Unfulfillable index hints (e.g. on non-existing indices) will now produce a warning or throw an error as configured
o Now supports dynamic property lookup (f.e. using n['property'])
o Usage of bare node patterns is now deprecated
o Range queries can now be solved using index seeks
o Prefer size() over length() for collections and pattern predicates
o Accept lower case 'e' in cypher exponent double literals
o Added support for join hints: USING JOIN ON n
o Added "DETACH DELETE" to Cypher
o Fixes a bug where input positions could become wrong on Windows platforms
o The compiler is now preloaded on db startup, minimizing delay of initial query
o Triadic selection is now supported
o Function exists() can now make use of index scans
o LIMIT now properly influence planning costs
o Generates a warning when dynamic property lookup makes index plans impossible
o New constraint type: property existence for nodes and relationships
o Inequality predicates can now be chained on the form 0 < n.prop < 10
o LIKE and ILIKE has been removed
o ShortestPath should now return paths that fulfil any predicates enforced upon it
o The str() function is now deprecated
o Cypher queries will no longer be logged in messages.log

2.3.0-M02
-------